@@ -1,3 +1,10 @@
+2009-05-01  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h: Add support for autohref,
+	makes trailers on the Apple website work again
+	(Closes: #580973)
+
 2009-04-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-uri.c (totem_add_subtitle):
